--- a/webglapp.html
+++ b/webglapp.html
@@ -9,8 +9,8 @@
 		<meta charset = "utf-8">
 		<title>Plantilla WebGL</title>
 		<style>
-			body( background-color: black; margin: 0px; overflow: hidden )
-			canvas( background-color: white; )
+			body{ background-color: black; margin: 0px; overflow: hidden }
+			canvas{ background-color: white; }
 		</style>
 	</head>
 	<body onload = "main()">
