[GPC] Practice 3, seminar 4

--- a/threejsapp.html
+++ b/threejsapp.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
         <!-- <canvas id = "canvas" width = "500" height = "400"></canvas> -->
-        <div id = "canvas"></div>
+        <div id = "container"></div>
 		
 		<!-- Bibliotecas de utilidad: (c) WebGl Programming Guide -->
 		<!-- <script src = "lib/webgl-utils.js"></script>
@@ -23,8 +23,17 @@
 		<script src = "lib/cuon-utils.js"></script>
 		<script src = "lib/cuon-matrix.js"></script>
 		
-		<!-- Mi aplicación -->
+		<!-- Librerías genéricas -->
+		<script src = "/lib/three.min_r96.js"></script>
 		<script src = "/lib/OrbitControls.js"></script>
-		<script src = "/threejs/FormaBasica_seminario3.js"></script>
+		<script src = "/lib/tween_18.js"></script> <!-- Interpolación -->
+		<script src = "/lib/dat.gui.min.js"></script> <!-- Widgets -->
+		<script src = "/lib/Coordinates.js"></script> <!-- Pintado mallas (planos) -->
+		
+		<script src = "/lib/cannon_062.js"></script> <!-- Físicas -->
+		<script src = "/lib/stats.min.js"></script> <!-- Información rendimiento -->
+
+		<!-- Mi aplicación -->
+		<script src = "/threejs/FormaBasica_seminario4.2.js"></script>
 	</body>
 </html>
