--- a/p4/threejsapp.html
+++ b/p4/threejsapp.html
@@ -24,7 +24,9 @@
 		<script src = "/lib/cuon-matrix.js"></script>
 		
 		<!-- Mi aplicación -->
+		<script src = "/lib/tween_18.js"></script> <!-- Movimiento -->
 		<script src = "/lib/OrbitControls.js"></script>
+		<script src = "/lib/dat.gui.min.js"></script> <!-- Widgets -->
 		<script src = "/p4/robot.js"></script>
 		
 	</body>
