Solve links to practice 2

--- a/p2/practica2.html
+++ b/p2/practica2.html
@@ -19,11 +19,11 @@
 		<!-- Bibliotecas de utilidad: (c) WebGl Programming Guide -->
 		<!-- <script src = "lib/webgl-utils.js"></script>
         <script src = "lib/webgl-debug.js"></script> -->
-        <script src = "lib/three.min_r96.js"></script>
-		<script src = "lib/cuon-utils.js"></script>
-		<script src = "lib/cuon-matrix.js"></script>
+        <script src = "/lib/three.min_r96.js"></script>
+		<script src = "/lib/cuon-utils.js"></script>
+		<script src = "/lib/cuon-matrix.js"></script>
 		
 		<!-- Mi aplicación -->
-		<script src = "threejs/robot.js"></script>
+		<script src = "/threejs/robot.js"></script>
 	</body>
 </html>
