--- a/p3/practica3.html
+++ b/p3/practica3.html
@@ -7,7 +7,7 @@
 <html lang = "es">
 	<head>
 		<meta charset = "utf-8">
-		<title>Plantilla WebGL</title>
+		<title>Práctica 3</title>
 		<style>
 			body {background-color: black; margin: 0px; overflow: hidden}
 		</style>
