--- a/p4/practica4.html
+++ b/p4/practica4.html
@@ -7,13 +7,12 @@
 <html lang = "es">
 	<head>
 		<meta charset = "utf-8">
-		<title>Plantilla WebGL</title>
+		<title>Práctica 4</title>
 		<style>
 			body {background-color: black; margin: 0px; overflow: hidden}
 		</style>
 	</head>
 	<body>
-        <!-- <canvas id = "canvas" width = "500" height = "400"></canvas> -->
         <div id = "canvas"></div>
 		
 		<!-- Bibliotecas de utilidad: (c) WebGl Programming Guide -->
