--- a/proyecto/proyecto.html
+++ b/proyecto/proyecto.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!--
-    Proyecto GPC.
-    Autor: Nahuel Unai Roselló Beneitez
+	GPC Project
+	Author: Nahuel Unai Roselló Beneitez
 -->
 
 <html lang = "es">
@@ -18,8 +18,10 @@
 		<!-- Bibliotecas de utilidad: (c) WebGl Programming Guide -->
 		<script src = "/lib/three.min_r96.js"></script>
 		<script src = "/lib/OrbitControls.js"></script>
-		<script src = "/lib/cuon-utils.js"></script>
-		<script src = "/lib/cuon-matrix.js"></script>
+		<!-- <script src = "/lib/cuon-utils.js"></script>
+		<script src = "/lib/cuon-matrix.js"></script> -->
+		<script src = "/lib/stats.min.js"></script>
+		<script src = "/lib/Reflector.js"></script>
 		
 		<!-- Mi aplicación -->
 		<script src = "/proyecto/proyecto.js"></script>
