--- a/proyecto/proyecto.html
+++ b/proyecto/proyecto.html
@@ -17,16 +17,13 @@
 		
 		<!-- Bibliotecas de utilidad: (c) WebGl Programming Guide -->
 		<script src = "/lib/three.min_r96.js"></script>
-		<!-- <script src = "/lib/legacyjsonloader.js"></script>
 		<script src = "/lib/three.min_r112.js"></script> -->
-		
-		<!-- <script src = "/lib/gltfloader.js"></script> -->
 		<script src = "/lib/OrbitControls.js"></script>
 		<!-- <script src = "/lib/cuon-utils.js"></script>
 		<script src = "/lib/cuon-matrix.js"></script> -->
 		<script src = "/lib/stats.min.js"></script>
-		<!-- <script src = "/lib/Reflector.js"></script> -->
 		<script src = "/lib/GLTFLoader.js"></script>
+		<script src = "/lib/dat.gui.min.js"></script>
 		
 		<!-- Mi aplicación -->
 		<script src = "/proyecto/proyecto.js"></script>
