--- a/p2/practica2.html
+++ b/p2/practica2.html
@@ -24,6 +24,6 @@
 		<script src = "/lib/cuon-matrix.js"></script>
 		
 		<!-- Mi aplicación -->
-		<script src = "/threejs/robot.js"></script>
+		<script src = "/p2/robot.js"></script>
 	</body>
 </html>
